AC_PREREQ([2.68])
AC_INIT([em], [1.0.0], [pierre.gaston@gmail.com])
AM_INIT_AUTOMAKE([-Wall  silent-rules])
AC_CONFIG_SRCDIR([src/em2.c])
AC_CONFIG_HEADERS([config.h])

AC_PROG_CC_STDC


AC_CHECK_HEADERS([fcntl.h stdlib.h termios.h unistd.h])

AC_CONFIG_FILES([ Makefile src/Makefile doc/Makefile])
AC_OUTPUT
